Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>My New Hugo Site</title>
+	<title>Bo&#39;s Blog</title>
 	
 	<meta name="description" content="">
 	<meta name="image" content="">
 	
-	<meta itemprop="name" content="My New Hugo Site">
+	<meta itemprop="name" content="Bo&#39;s Blog">
 	<meta itemprop="description" content="">
 	<meta itemprop="image" content="">
 	
-	<meta name="og:title" content="My New Hugo Site">
+	<meta name="og:title" content="Bo&#39;s Blog">
 	<meta name="og:description" content="">
 	
 	<meta name="og:url" content="http://bochang.me/blog/">
-	<meta name="og:site_name" content="My New Hugo Site">
+	<meta name="og:site_name" content="Bo&#39;s Blog">
 	<meta name="og:type" content="article">
 	
 	<meta name="article:tag" content="">
@@ -33,7 +33,7 @@
 
 <header>
 	
-	<a href="http://bochang.me/blog/" style="float: left;color:#ff3b30;">My New Hugo Site</a>
+	<a href="http://bochang.me/blog/" style="float: left;color:#ff3b30;">Bo&#39;s Blog</a>
 	
 	
 	
