--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<meta name="image" content="">
 	
+	
 	<meta itemprop="name" content="Bo&#39;s Blog">
 	<meta itemprop="description" content="">
 	<meta itemprop="image" content="">
@@ -36,8 +37,7 @@ if (!doNotTrack) {
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 
 <body>
